--- a/Integrador/Views/Shared/_Dashboard.cshtml
+++ b/Integrador/Views/Shared/_Dashboard.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@model Integrador.Models.User
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
