--- a/Integrador/Views/Shared/_Layout.cshtml
+++ b/Integrador/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@model Integrador.Models.User
 
 <!DOCTYPE html>
 <html lang="en">
@@ -89,7 +90,7 @@
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Register" asp-action="Index">Register</a></li>   
                                 <li><a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Index">User</a></li>  
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Dashboard" asp-action="Index" >Dashboard</a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Profile" asp-action="Index" asp-route-id="">My Profile</a></li>                                                              
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Profile" asp-action="Index">My Profile</a></li>                                                              
                             </ul>
                         </li>
                     </ul>
