--- a/Integrador/Views/Profile/Index.cshtml
+++ b/Integrador/Views/Profile/Index.cshtml
@@ -68,7 +68,7 @@
                             <div class="col-lg-12">
                                 <div class="form-group">
                                     <label>New Password</label>
-                                    <input type="password" name="new-password" asp-for="Password" class="form-control" placeholder="New Password">
+                                    <input type="text" name="new-password" asp-for="Password" class="form-control" placeholder="New Password">
                                 </div>
                             </div>
                             
